--- a/eCare/RESTClient/pom.xml
+++ b/eCare/RESTClient/pom.xml
@@ -106,7 +106,11 @@
             <version>2.7</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.9</version>
+        </dependency>
 
 
     </dependencies>
