--- a/eCare/OperatorMainApp/pom.xml
+++ b/eCare/OperatorMainApp/pom.xml
@@ -197,6 +197,12 @@
             <artifactId>mail</artifactId>
             <version>1.5.0-b01</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>4.3.3.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
