--- a/eCare/OperatorMainApp/pom.xml
+++ b/eCare/OperatorMainApp/pom.xml
@@ -206,6 +206,18 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.0.0-beta4</version>
+        </dependency>
+
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-server</artifactId>
+                <version>3.0.0-beta4</version>
+            </dependency>
+
     </dependencies>
 
     <build>
